--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,11 +7,52 @@
     android:layout_height="match_parent"
     tools:context=".MapActivity">
 
+    <GridLayout
+        android:id="@+id/grid_btns"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        >
+
+        <Button
+            android:id="@+id/btn_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/home"
+            android:onClick="onClick_Home"
+            />
+
+        <Button
+            android:id="@+id/btn_canada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/canada"
+            android:onClick="onClick_Canada"
+            />
+
+        <Button
+            android:id="@+id/btn_DPI"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/dpi"
+            android:onClick="onClick_DPI"
+            />
+
+
+    </GridLayout>
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/grid_btns"
+        android:layout_margin="15dp"
         />
 
 
