--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -53,6 +53,18 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/grid_btns"
         android:layout_margin="15dp"
+        android:layout_above="@id/btn_local"
+        />
+
+    <Button
+        android:id="@+id/btn_local"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
+        android:text="@string/local"
+        android:onClick="onClick_Local"
         />
 
 
